# GFC2

src/: CMakeLists.txt
src/GfcClasses/: CMakeLists.txt
src/GfcCommon/: CMakeLists.txt
src/GfcEngine/: CMakeLists.txt
src/GfcSchema/: CMakeLists.txt
src/GfcUtils/: CMakeLists.txt
tools/GenGFCCode/: CMakeLists.txt
